--- a/HtmlParsing/HtmlParsing.Tests/HtmlParsing.Tests.csproj
+++ b/HtmlParsing/HtmlParsing.Tests/HtmlParsing.Tests.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseTest.cs" />
+    <Compile Include="HtmlElementTests.cs" />
     <Compile Include="HtmlParserTests.cs" />
     <Compile Include="HtmlSanitizerTests.cs" />
     <Compile Include="TestHelper.cs" />
@@ -61,6 +62,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Data\test.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Data\Sample.htm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
